# rust-sprinkler-control

./: Cargo.toml  README.md
services/: sprinkler-control.service
src/: cli.yml  config.rs  config.yml  helper.rs  main.rs  state.rs  zone.rs
