[package]
name = "sprinkler-control"
version = "0.1.0"
authors = ["Tomas Jakstas <tom.jakstas@madesimplegroup.com>"]
edition = "2018"

[dependencies]
json = "0.12.0"
yaml-rust = "0.4.3"
chrono = "0.4"
mosquitto-client = "0.1.5"
arraydeque = "0.4"
clap = {version = "~2.31.2", features = ["yaml"]}
arduino-mqtt-pin = { version = "~0.1", git = "https://github.com/songokas/rust-arduino-mqtt-pin" }
log = "0.4.0"
env_logger = "0.7.0"
